Disable drag and drop when we use stylus on Windows

Windows DoDragDrop function does not support invoking drag and drop support when
we handle touch or pen input. If we want to support drag and drop for pen input,
we have to listen to WM_MOUSE instead of WM_POINTER.
https://msdn.microsoft.com/en-us/library/windows/desktop/ms678486(v=vs.85).aspx

Edge does not support drag and drop for pen neither.

BUG=724836

Review-Url: https://codereview.chromium.org/2911413002
Cr-Commit-Position: refs/heads/master@{#475934}

Former-commit-id: 984c0003a871be8eec92691961ae0617fe728fb1