third_party/WebKit/Source/core/input/MouseEventManager.cpp
@@ -755,6 +755,10 @@ WebInputEventResult MouseEventManager::HandleMouseDraggedEvent(
   if (!mouse_pressed_)
     return WebInputEventResult::kNotHandled;
 
+  if (event.Event().pointer_type ==
+      blink::WebPointerProperties::PointerType::kPen)
+    return WebInputEventResult::kNotHandled;
+
   if (HandleDrag(event, DragInitiator::kMouse))
     return WebInputEventResult::kHandledSystem;
 
